--- a/style.css
+++ b/style.css
@@ -31,6 +31,20 @@
 
 }
 
-.user {
+.mensage {
+  background-color: antiquewhite;
+  width: 375px;
+  height: 40px;
+  margin-bottom:4px;
 }
-  
+
+.enter-room {
+  background-color: #DCDCDC;
+
+}
+
+.private {
+  background-color: #FFDEDE;
+}
+
+
