--- a/style.css
+++ b/style.css
@@ -27,15 +27,17 @@
 }
 
 .main {
+  width: 100vw;
   margin-top: 80px;
-
 }
 
 .mensage {
   background-color: antiquewhite;
-  width: 375px;
-  height: 40px;
+  min-height: 40px;
+  height: auto;
   margin-bottom:4px;
+  width: 100%;
+  display: flex;
 }
 
 .enter-room {
@@ -45,6 +47,17 @@
 
 .private {
   background-color: #FFDEDE;
+}
+
+.send-text{
+  background-color: brown;
+  width: 100vw;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
 }
 
 
