--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.body {
+  font-size: 16px;
+}
 .front{
   display: none;
 }
@@ -49,7 +52,7 @@
   background-color: #FFDEDE;
 }
 
-.send-text{
+.write-text{
   background-color: brown;
   width: 100vw;
   height: 80px;
@@ -57,7 +60,59 @@
   bottom: 0;
   left: 0;
   right: 0;
-
 }
 
+/* NAV */
+.navbar{
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  background: rgba(0,0,0, 0.5);
+}
+.navbar .nav {
+  background-color: #fff;
+  max-width: 70vw;
+}
 
+.nav .sidebar {
+  padding: 0 16px;
+}
+
+.list .list-header {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 32px;
+  font-weight: bold;
+}
+
+.list .list-type {
+  display: flex;
+  align-items: center;
+  padding: 5px 0;
+}
+.list .icon {
+  font-size: 20px;
+}
+.list .list-type .item-label {
+  margin-left: 10px;
+}
+
+.list-items .item {
+  width: 100%;
+  padding: 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.list-items .item .label {
+  margin-left: 10px;
+}
+
+.list-items .item .active-item {
+  margin-left: auto;
+}
