--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   background-color: brown;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   position: fixed;
   top: 0;
@@ -36,6 +37,9 @@ body {
 }
 .header .img-logo img {
   width:100%;
+}
+.header .people-icon {
+  font-size:40px;
 }
 
 .main {
