--- a/style.css
+++ b/style.css
@@ -2,13 +2,8 @@ body {
   font-size: 16px;
   background-color: #F3F3F3;
 }
-
-.diplay-none {
-  display: none !important;
-}
-
-.diplay-block {
-  display: block !important;
+.container {
+  position: relative;
 }
 
 .front{
@@ -133,22 +128,34 @@ body {
 }
 
 /* NAV */
+
 .navbar{
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.navbar.show {
+  display: block;
+}
+.navbar-options {
   display: flex;
   justify-content: flex-end;
-  height: 100%;
-  width: 100%;
-  background: rgba(0,0,0, 0.5);
+  height: 100vh;
 }
-.navbar .nav {
+
+
+
+.navbar .navbar-options .nav {
   background-color: #fff;
   max-width: 70vw;
 }
 
-.nav .sidebar {
+.navbar .navbar-options .sidebar {
   padding: 0 16px;
 }
 
